[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "cudaq_tutorial"
authors = [
    {name = "Jessica Jeng", email = "mingyoungjeng@u.northwestern.edu"},
]
description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cuda-quantum",
    "jupyter",
]
dynamic = ["version"]

[project.optional-dependencies]

[project.scripts]
